--- a/css/bootstrap-styles.css
+++ b/css/bootstrap-styles.css
@@ -58,6 +58,10 @@ body {
   transition: all 0.3s ease-in-out;
 }
 
+.how-work {
+  background-color: var(--lightblue);
+}
+
 footer {
   background-color: var(--black);
 }
