--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,7 @@ img {
 
 /* navbar */
 
-.navbar {
+/* .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -64,7 +64,7 @@ img {
   border: none;
   font-size: 14px;
   cursor: pointer;
-}
+} */
 
 /* jumbotron */
 
@@ -307,7 +307,7 @@ img {
 
 /* footer */
 
-.footer__container {
+/* .footer__container {
   display: flex;
   justify-content: center;
   background-color: var(--black);
@@ -328,3 +328,4 @@ img {
 .footer__text i {
   color: var(--aquamarine);
 }
+ */
